--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -78,7 +78,7 @@
                 </p>
                 <div class="coordinates-input-wrapper creationForm">
                     <div class="coordinates-input-container">
-                        <div>
+                        <!-- <div>
                             <label for="latitude">Latitude:</label>
                             <input  name="Latitude"   />
                         </div>
@@ -86,7 +86,7 @@
                             <label for="longitude">Longitude:</label>
                             <input  name="Longitude" />
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -123,8 +123,8 @@
         </div>
       </div>
     <div class=" grid grid-cols-2 gap-4">
-        <!-- <input name="Longitude" type="text">
-        <input name="Latitude" type="text"> -->
+        <input name="Longitude" type="text">
+        <input name="Latitude" type="text">
       <!-- <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" />  --> 
 
         <!-- {{ form|crispy }} -->
