--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -122,7 +122,7 @@
        
         </div>
       </div>
-    <div class=" grid grid-cols-2 gap-4">
+    <div class="creationForm grid grid-cols-2 gap-4">
         <input name="Longitude" type="text">
         <input name="Latitude" type="text">
       <!-- <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" />  --> 
