--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -125,7 +125,7 @@
     <div class="creationForm grid grid-cols-2 gap-4">
         <input name="Longitude" type="text">
         <input name="Latitude" type="text">
-      <!-- <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" />  --> 
+       <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" /> 
 
         <!-- {{ form|crispy }} -->
     </div>
