--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -127,7 +127,7 @@
         <input name="Latitude" type="text">
        <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" /> 
 
-        <!-- {{ form|crispy }} -->
+        {{ form|crispy }}
     </div>
 <div class="p-4 flex justify-end">
         <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Save</button>
