--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -131,39 +131,38 @@
 
 <div id="div_id_Asset_File" class="mb-3"> 
     <label for="id_Asset_File" class="block text-gray-700 text-sm font-bold mb-2">
-            Asset file<span class="asteriskField">*</span>
+            Asset file<span class="asteriskField"></span>
          </label>
-          <input type="file" name="Asset_File" class="clearablefileinput " required="" id="id_Asset_File"> 
-          <p id="error_1_id_Asset_File" class="text-red-500 text-xs italic">
-              <strong>This field is required.</strong></p> </div> <div id="div_id_Longitude" class="mb-3">
+          <input type="file" name="Asset_File" class="clearablefileinput " id="id_Asset_File"> 
+           </div>
+            <div id="div_id_Longitude" class="mb-3">
                    <label for="id_Longitude" class="block text-gray-700 text-sm font-bold mb-2">
-            Longitude<span class="asteriskField">*</span>
+            Longitude<span class="asteriskField"></span>
          </label>
-          <input type="number" name="Longitude" value="12" step="0.00001" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white" required="" id="id_Longitude"> 
+          <input type="number" name="Longitude" value="12" step="0.00001" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude"> 
         </div> 
              <div id="div_id_Latitude" class="mb-3">
                <label for="id_Latitude" class="block text-gray-700 text-sm font-bold mb-2">
-            Latitude<span class="asteriskField">*</span> 
+            Latitude<span class="asteriskField"></span> 
         </label>
-         <input type="number" name="Latitude" value="222" step="0.00001" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white" required="" id="id_Latitude"> </div> 
+         <input type="number" name="Latitude" value="222" step="0.00001" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude"> </div> 
          <div id="div_id_Expiry_date" class="mb-3">
               <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
-            Expiry date<span class="asteriskField">*</span> 
+            Expiry date<span class="asteriskField"></span> 
         </label> 
-        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date" required="" id="id_Expiry_date"> 
-        <p id="error_1_id_Expiry_date" class="text-red-500 text-xs italic">
-            <strong>This field is required.</strong
-                ></p>
+        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date"> 
+        
              </div>
               <div id="div_id_Expiry_time" class="mb-3">
                    <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">
-            Expiry time<span class="asteriskField">*</span>
+            Expiry time<span class="asteriskField"></span>
          </label>
-          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" required="" id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
+          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
               <strong>This field is required.</strong></p> 
             </div>
 
     </div>
+    <button value="submit" name="Submit">submit</button>
   </form>
     <page-footer></page-footer>
     <feedback-button></feedback-button>
