--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -116,7 +116,7 @@
                 </ul>
                 </p>
                 <label class="passive-button file-input">
-                    <input id="content-file" accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
+                    <input id="content-file id_Asset_File"   class="clearablefileinput " accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                 <p id="content-error" class="error"></p>
@@ -131,23 +131,23 @@
 
         
 
-<div id="div_id_Asset_File" class="mb-3"> 
+<!-- <div id="div_id_Asset_File" class="mb-3"> 
     <label for="id_Asset_File" class="block text-gray-700 text-sm font-bold mb-2">
-            Asset file<span class="asteriskField"></span>
+            Asset file
          </label>
           <input type="file" name="Asset_File" class="clearablefileinput " id="id_Asset_File"> 
-           </div>
+           </div> -->
            
          <div id="div_id_Expiry_date" class="mb-3">
               <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
-            Expiry date<span class="asteriskField"></span> 
+            Expiry date
         </label> 
         <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date"> 
         
              </div>
               <div id="div_id_Expiry_time" class="mb-3">
                    <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">
-            Expiry time<span class="asteriskField"></span>
+            Expiry time
          </label>
           <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
               <strong>This field is required.</strong></p> 
