--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -116,7 +116,7 @@
                 </ul>
                 </p>
                 <label class="passive-button file-input">
-                    <input id="content-file id_Asset_File"   class="clearablefileinput " accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
+                    <input id="content-file"   class="clearablefileinput " accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                 <p id="content-error" class="error"></p>
