--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -67,7 +67,7 @@
         </div>
 
 
-     <from method="POST">
+     <from method="POST" action="">
          {% csrf_token %}
         <div class="pages-content-container">
             <div class="pages-content-element">
