--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -67,7 +67,7 @@
         </div>
 
 
-     <form method="POST">
+     <form action="/new_asset/" method="POST">
          {% csrf_token %}
         <div class="pages-content-container">
             <div class="pages-content-element">
