--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -156,7 +156,7 @@
 <!--    <button value="submit" name="Submit">submit</button>-->
 
 <!--     </form>-->
-        <form method="post" enctype="multipart/form-data">
+        <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <button class="btn btn-primary" type='submit'>Submit</button>
