--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -96,9 +96,9 @@
         </div>
 
 
-<!--        <div class="pages-content-container">-->
-<!--            <map-pick-location></map-pick-location>-->
-<!--        </div>-->
+        <div class="pages-content-container">
+            <map-pick-location></map-pick-location>
+        </div>
 
         <div class="pages-content-container">
             <div class="pages-content-element">
