--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -116,7 +116,7 @@
                 </ul>
 
                 <label class="passive-button file-input">
-                    <input id="content-file"   class="clearablefileinput " accept="*" type="file" name="Asset_File"   />
+                    <input id="content-file"   class="clearablefileinput " accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                 <p id="content-error" class="error"></p>
