--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -115,15 +115,13 @@
                     <li>Video (.mp4; max size 25MB)</li>
                 </ul>
 
+
+
                 <label class="passive-button file-input">
-                    <input    class="clearablefileinput " accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" />
+                    <input id="content-file" accept="*" type="file" hidden name="Asset_File"  onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
-                <p id="content-error" class="error"></p>
-                <label class="passive-button file-input">
-                    <input id="content-file" accept="*" type="file" hidden onchange="handleContentUpload(this)" />
-                    Upload file
-                </label>
+                    <p id="content-error" class="error"></p>
             </div>
 
 
