--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -18,12 +18,11 @@
   <header>
     <!-- Fixed navbar -->
     <div class="flex justify-between align-items-center p-6 bg-white border-bottom shadow-sm">
-         {% if user.is_authenticated %}
-            <a href="{% url 'events' %}" class="navbar-brand my-0 font-bold block flex" style="align-items: center;">
+         <a href="{% url 'home' %}" class="navbar-brand my-0 font-bold block flex" style="align-items: center;">
                 <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
                 <div class="font-bold  flex flex-col justify-center">DazShop</div>
             </a>
-
+        {% if user.is_authenticated %}
 
         <div class="flex w-1/6">
             <a href="{% url 'profile' %}">
@@ -32,7 +31,7 @@
             {% if user.profilePic %}
                 <img class="w-14 h-14 bg-gray-300 rounded-full mr-3" src="{{ user.profilePic.url }}">
             {% else %}
-                <div class="w-14 h-14 bg-gray-300 rounded-full mr-3"></div>
+                <img class="w-14 h-14 bg-gray-300 rounded-full mr-3" src="{% static 'images/nopic.jpg' %}">
             {% endif %}
             </a>
             <div class="flex flex-col justify-center ">
@@ -47,10 +46,6 @@
 <!--        <p><a href="#">Log out</a></p>-->
 
       {% else %}
-        <a href="{% url 'login' %}" class="navbar-brand my-0 font-bold block flex" style="align-items: center;">
-                <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
-                <div class="font-bold  flex flex-col justify-center">DazShop</div>
-            </a>
         <div class="flex flex-row " style="align-items: center;">
             <a class="bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block " href="{% url 'login' %}">Log In</a>
             <a class="bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block" href="{% url 'signup' %}">Sign Up</a>
@@ -59,6 +54,7 @@
     </div>
   </header>
   <div class="flex flex-row">
+      {% if user.is_authenticated %}
      <nav class="w-1/5 border-r-2 pl-16">
          <ul>
              <li class="my-6">
@@ -72,8 +68,9 @@
              </li>
          </ul>
       </nav>
+      {% endif %}
      <div class="container">
-         <div class="m-6">
+         <div class="my-6 mx-auto">
 
     {% block content %}
     {% endblock content %}
