--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -164,7 +164,8 @@
 <!--            <button class="btn btn-primary" type='submit'>Submit</button>-->
 <!--        </form>-->
     </div>
-
+ <page-footer></page-footer>
+    <feedback-button></feedback-button>
 </body>
 
 
