--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -123,6 +123,7 @@
                 </label>
                     <p id="content-error" class="error"></p>
             </div>
+            <div id="content-preview" target="content-file">
 
 
         </div>
