--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -124,7 +124,7 @@
                     <p id="content-error" class="error"></p>
             </div>
             <div id="content-preview" target="content-file">
-
+            </div>
 
         </div>
 
