--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -165,7 +165,7 @@
 <!--            <button class="btn btn-primary" type='submit'>Submit</button>-->
 <!--        </form>-->
     </div>
-<page-footer></page-footer>
+<page-footer style="display:none;"></page-footer>
     <feedback-button></feedback-button>
 </body>
 
