--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -6,5 +6,5 @@
 {% block content %}
 
 <h1>Homepage</h1>
-  <img class="bookcover" src="{% static 'images/dfp.png' %}">
+<!--  <img class="bookcover" src="{% static 'images/dfp.png' %}">-->
 {% endblock content %}
