--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -5,6 +5,6 @@
 
 {% block content %}
 
-<h1>Homepage</h1>
+<h1 class="font-bold">Homepage</h1>
 <!--  <img class="bookcover" src="{% static 'images/dfp.png' %}">-->
 {% endblock content %}
