--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -82,13 +82,13 @@
                             <label for="id_Longitude" class="block text-gray-700 text-sm font-bold mb-2">
                             Longitude
                         </label>
-                        <input type="number" name="Longitude" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude">
+                        <input  name="Longitude" class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Longitude">
                         </div>
                             <div id="div_id_Latitude" class="mb-3">
                             <label for="id_Latitude" class="block text-gray-700 text-sm font-bold mb-2">
                             Latitude
                         </label>
-                        <input type="number" name="Latitude"  class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude">
+                        <input  name="Latitude"  class="numberinput focus:outline-none leading-normal px-4 rounded-lg border-gray-300 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Latitude">
                         </div>
                    </div>
                 </div>
