--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -121,10 +121,10 @@
 <!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleContentUpload(this)" />-->
                     Upload file
                 </label>
-<!--                    <p id="content-error" class="error"></p>-->
-<!--            </div>-->
-<!--            <div id="content-preview" target="content-file">-->
-<!--            </div>-->
+                    <p id="content-error" class="error"></p>
+            </div>
+            <div id="content-preview" target="content-file">
+            </div>
 
         </div>
 
@@ -137,12 +137,11 @@
     <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">
             Asset file
          </label>
-          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput " onchange="handleContentUpload(this)" >
+          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput "  >
            </div>
-      <p id="content-error" class="error"></p>
-            </div>
-            <div id="content-preview" target="content-file">
-            </div>
+
+
+           </div>
 
          <div id="div_id_Expiry_date" class="mb-3">
               <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
