--- a/event/templates/Asset_detail.html
+++ b/event/templates/Asset_detail.html
@@ -1,31 +1,40 @@
-{% extends '_base.html' %} {% block content %}
-<div class="article-entry">
-	{% if object.featured_image %}
-	<img class="bookcover" src="{{ object.featured_image.url }}" />
-	{% endif %}
-	<h2>{{ object.code }}</h2>
-	<p>
-		<span class="text-muted">
-			Expiry date: {{ object.Expiry_date }} | Expiry time: {{ object.Expiry_time
-			}}</span
-		>
-	</p>
-	<!-- <p>Google maps link {{ object.Google_maps_link }}</p>
-      <p>ASSETS_TYPE {{object.ASSETS_TYPE}}</p> -->
-</div>
 
-<p>
-	<a
-		class="text-purple-400 capitalize hover:text-purple-800"
-		href="{% url 'Asset_edit' asset.id %}"
-		>Edit</a
-	>
-	|
-	<a
-		class="text-purple-400 capitalize hover:text-purple-800"
-		href="{% url 'Asset_delete' asset.id %}"
-		>Delete</a
-	>
-</p>
-<p>Back to <a href="{% url 'Assets_list' %}">All Assets</a>.</p>
-{% endblock content %}
+<!doctype html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+        <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+        <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    </head>
+
+    <body style="margin: 0; overflow: hidden;">
+        <a-scene
+            renderer="logarithmicDepthBuffer: true;"
+            embedded
+            loading-screen="enabled: false;"
+            arjs="sourceType: webcam; debugUIEnabled: false;"
+        >
+            <a-assets>
+
+              <a-asset-item
+                    id="animated-asset"
+                    src="{{ object.Asset_File }}"
+                ></a-asset-item>
+
+            </a-assets>
+                <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
+                    scale="16.551939061849072 16.551939061849072 16.551939061849072"
+                    gps-entity-place="latitude: {{ object.Latitude }}; longitude: {{ object.Longitude }};"
+                ></a-entity>
+
+            <a-camera gps-camera rotation-reader></a-camera>
+        </a-scene>
+    </body>
+</html>
+
