--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -158,8 +158,8 @@
 
             </div>
 
-    </div>
-    <button value="submit" name="Submit">submit</button>
+
+    <button value="submit" class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" name="Submit">submit</button>
 
      </form>
 <!--        <form method="post" enctype="multipart/form-data">-->
