--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -7,16 +7,13 @@
   {% for asset in object_list %}
     {% if user.id  == asset.user.id %}
         <div class="card">
-          {% if asset.featured_image %}
-         <img class="bookcover" src="{{ asset.featured_image.url }}">
-            {% endif %}
+
           <div class="card-header">
            <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">{{ asset.code }}</a> &middot;<br>
             <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
           </div>
           <div class="card-body">
-           <!-- ASSETS TYPE: {{ asset.ASSETS_TYPE }} <br> -->
-              <!-- Google maps link: {{ asset.Google_maps_link }} -->
+            test
           </div>
           <div class="card-footer text-center text-muted">
             <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</>
