--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -1,27 +1,20 @@
 {% extends '_base.html' %}
-
 {% block title %}assets{% endblock title %}
-
 {% block content %}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
   {% for asset in object_list %}
-
         <div class="card">
-
           <div class="card-header">
-           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">{{ asset.code }}</a> &middot;<br>
+           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">{{ asset.Longitude }}</a> &middot;<br>
             <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
           </div>
           <div class="card-body">
             test
           </div>
           <div class="card-footer text-center text-muted">
-            <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</>
+            <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a>
           </div>
         </div>
-
-
-
   {% endfor %}
 </div>
 {% endblock content %}
