--- a/event/templates/Asset_detail.html
+++ b/event/templates/Asset_detail.html
@@ -20,7 +20,7 @@
 
               <a-asset-item
                     id="animated-asset"
-                    src="{{ object.Asset_File }}"
+                    src="{{ object.Asset_File.url }}"
                 ></a-asset-item>
 
             </a-assets>
