--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -52,7 +52,7 @@
 
 
     <div class="pages-content">
-        <back-anchor assetsUrl="https://softylus.com/studio-master/assets"></back-anchor>
+<!--        <back-anchor assetsUrl="https://softylus.com/studio-master/assets"></back-anchor>-->
         <div class="pages-content-container">
             <div class="pages-content-element">
                 <p class="title">Location-based</p>
