--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -118,7 +118,7 @@
 
 
                 <label class="passive-button file-input">
-<!--                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleContentUpload(this)" />-->
+                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                     <p id="content-error" class="error"></p>
@@ -133,15 +133,15 @@
 
 
 
- <div id="div_id_Asset_File" class="mb-3">
-    <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">
-            Asset file
-         </label>
-          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput "  >
-           </div>
+<!-- <div id="div_id_Asset_File" class="mb-3">-->
+<!--    <label for="content-file" class="block text-gray-700 text-sm font-bold mb-2">-->
+<!--            Asset file-->
+<!--         </label>-->
+<!--          <input type="file"  id="content-file" accept="*"  name="Asset_File" class="clearablefileinput "  >-->
+<!--           </div>-->
 
 
-           </div>
+
 
          <div id="div_id_Expiry_date" class="mb-3">
               <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
@@ -157,7 +157,7 @@
           <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
 
             </div>
-
+</div>
 
     <button value="submit" class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" name="Submit">submit</button>
 
