--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -116,12 +116,13 @@
                 </ul>
 
 
-
-                <label class="passive-button file-input">
+<div id="div_id_Asset_File" >
+                <label for="content-file" class="passive-button file-input">
                     <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleContentUpload(this)" />
                     Upload file
                 </label>
                     <p id="content-error" class="error"></p>
+</div>
             </div>
             <div id="content-preview" target="content-file">
             </div>
@@ -147,14 +148,14 @@
               <label for="id_Expiry_date" class="block text-gray-700 text-sm font-bold mb-2">
             Expiry date
         </label>
-        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">
+        <input type="date" name="Expiry_date" class="datepicker1 dateinput focus:outline-none leading-normal px-4 rounded-lg appearance-none text-gray-700 w-full border block py-2 bg-white" placeholder="Select Date"  id="id_Expiry_date">
 
              </div>
               <div id="div_id_Expiry_time" class="mb-3">
                    <label for="id_Expiry_time" class="block text-gray-700 text-sm font-bold mb-2">
             Expiry time
          </label>
-          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg border-red-500 appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
+          <input type="time" name="Expiry_time" class="timeinput focus:outline-none leading-normal px-4 rounded-lg appearance-none text-gray-700 w-full border block py-2 bg-white"  id="id_Expiry_time"> <p id="error_1_id_Expiry_time" class="text-red-500 text-xs italic">
 
             </div>
 </div>
