--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -128,7 +128,7 @@
             </div>
 
         </div>
-
+<p class="lead">2. Choose the Date </p>
   <div class="creationForm grid grid-cols-2 gap-4">
 
 
