--- a/templates/Asset_new.html
+++ b/templates/Asset_new.html
@@ -118,7 +118,7 @@
 
 <div id="div_id_Asset_File" >
                 <label for="content-file" class="passive-button file-input">
-                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "  onchange="handleContentUpload(this)" />
+                    <input  id="content-file" accept="*" type="file" hidden name="Asset_File"  class="clearablefileinput "   /> <!-- onchange="handleContentUpload(this)"-->
                     Upload file
                 </label>
                     <p id="content-error" class="error"></p>
